--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="with=device-width, initial-scale=1.0">
         <title>All You Need to Know About Coffee</title>
-        <link rel="stylesheet" href="samnepomuceno111-code/CoffeeVerse_/style.css">
+        <link rel="stylesheet" href="../CoffeeVerse_/css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap">
