--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(122, 133, 174, 0.7),rgba(73, 81, 110, 0.7)),url(images/bg.jpg);
+    background-image: linear-gradient(rgba(122, 133, 174, 0.7),rgba(73, 81, 110, 0.7)),url(img/bg.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -71,7 +71,7 @@ nav img {
     <body>
         <section class="header">
             <nav>
-                <a href="index.html"><img src="images/pls.png"></a>
+                <a href="index.html"><img src="img/pls.png"></a>
                 <div class="nav-links">
                     <ul>
                         <li><a href="">HOME</a></li>
