--- a/index.html
+++ b/index.html
@@ -66,6 +66,37 @@ nav img {
 .nav-links ul li:hover::after{
     width: 100%;
 } 
+.text-box{
+    width: 90%;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.text-box h1 {
+    font-size: 70px;
+}
+
+.text-box p {
+    margin: 10 px 0 40px;
+    font-size: 20px;
+    color: #fff;
+}
+
+.footer {
+    width: 100%;
+    text-align: center;
+    padding: 30px 0;
+}
+
+.footer h4 {
+    margin-bottom: 25px;
+    margin-top: 20px;
+    font-weight: 600px;
+}
         </style>
     </head>
     <body>
