--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ nav{
 
 nav img {
     width: 90px;
+    background: transparent;
 }
 
 .nav-links {
@@ -102,7 +103,7 @@ nav img {
     <body>
         <section class="header">
             <nav>
-                <a href="index.html"><img src="./CoffeeVere/pls.png"></a>
+                <a href="index.html"><img src="./CoffeeVere/pls.jpg"></a>
                 <div class="nav-links">
                     <ul>
                         <li><a href="">HOME</a></li>
