--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(122, 133, 174, 0.7),rgba(73, 81, 110, 0.7)),url(CoffeeVere/bg.jpg);
+    background-image: linear-gradient(rgba(122, 133, 174, 0.7),rgba(73, 81, 110, 0.7)),url(/CoffeeVere/bg.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
