--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ nav img {
     <body>
         <section class="header">
             <nav>
-                <a href="index.html"><img src="CoffeeVere/pls.png"></a>
+                <a href="index.html"><img src="./CoffeeVere/img/pls.png"></a>
                 <div class="nav-links">
                     <ul>
                         <li><a href="">HOME</a></li>
