--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@ nav{
     align-items: center;
 }
 
-.nav img {
-    width: 90px;
-    background: transparent;
+nav img {
+    width: 100px;
 }
 
 .nav-links {
