--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ nav img {
                 <a href="index.html"><img src="../CoffeeVere/img/pls.png"></a>
                 <div class="nav-links">
                     <ul>
-                        <li><a href="">HOME</a></li>
-                        <li><a href="">ABOUT</a></li>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="about.html">ABOUT</a></li>
                         <li><a href="">TIPS</a></li>
                         <li><a href="">RECIPES</a></li>
                         <li><a href="">REFERENCES</a></li>
