--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@ nav img {
 .sub-header {
     height: 50vh;
     width: 100%;
-    background-image: linear-gradient(rgba(122, 133, 174, 0.7),rgba(73, 81, 110, 0.7)),url(images/smth.jpg);
+    background-image: linear-gradient(rgba(122, 133, 174, 0.7),rgba(73, 81, 110, 0.7)),url("../CoffeeVere/img/smth.jpg");
     background-position: center;
     background-size: cover;
     text-align: center;
