--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@ nav img {
         </style>
     </head>
     <body>
-        <section class="header">
+        <section class="sub-header">
             <nav>
                 <a href="index.html"><img src="../CoffeeVere/img/pls.png"></a>
                 <div class="nav-links">
