--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@ nav img {
 }
 
 .sub-header h1 {
-    margin-top: 75px;
+    margin-top: 85px;
 }
 
 .about-author {
@@ -95,6 +95,15 @@ nav img {
     flex-basis: 48%;
     padding: 30px 2px;
 }
+
+.about-col h1 {
+    text-align: left;
+}
+
+.about-col p{
+    text-align: left;
+}
+            
 .about-col img{
     width: 100%;
 }
