--- a/about.html
+++ b/about.html
@@ -88,12 +88,14 @@ nav img {
     padding-top: 80px;
     padding-bottom: 50px;
     text-align: left;
+    color: #fff;
 
 }
 
 .about-col {
     flex-basis: 48%;
     padding: 30px 2px;
+    color: #fff;
 }
 
 .about-col h1 {
