--- a/about.html
+++ b/about.html
@@ -131,17 +131,16 @@ nav img {
         </section>
 
         <section class="about-author">
-  <div class="row">
-    <div class="about-col">
-      <h1>Samara Nepmuceno</h1>
-      <p>I'm the founder of CoffeeVerse, and coffee is an adventure with flavor, craftsmanship, and culture. CoffeeVerse was created to explore that adventure and appreciate the traditions surrounding the popular beverage. With knowledge and atmosphere at your fingertips, there is always something new to find here.</p>
-    </div>
-
-    <div class="about-col">
-      <img src="../CoffeeVere/img/me.jpg" alt="Author photo">
-    </div>
-  </div>
-</section>
+            <div class="row">
+                <div class ="about-col">
+                    <h1>Samara Nepmuceno</h1>
+                    <p>I'm the founder of CoffeeVerse, and coffee is an adventure with flavor, craftsmanship, and culture. CoffeeVerse was created to explore that adventure and appreciate the traditions that exist around the popular beverage. With knowledge and atmosphere at your fingertips, there is always something new to find here.</p>
+                <div class="about-col">
+                    <img src="../CoffeeVere/img/me.jpg" alt="Author photo">
+                </div>
+                </div>
+            </div>
+        </section>
 
     </body>
 </html>
