--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@ nav img {
     padding-top: 80px;
     padding-bottom: 50px;
     text-align: left;
-    color: #fff;
+
 
 }
 
@@ -102,11 +102,13 @@ nav img {
 .about-col {
   flex-basis: 48%; 
   padding: 30px 2px;
-  color: #fff;
+
 }
             
 .about-col img{
     width: 100%;
+    align-items: right;
+    justify-content: space-between;
 }
   
         </style>
