--- a/about.html
+++ b/about.html
@@ -95,21 +95,20 @@ nav img {
 .row {
   display: flex;
   justify-content: space-between; 
-  align-items: flex-start;       
-  gap: 20px;                     
+  align-items: center;            
+  gap: 30px;                      
 }
 
 .about-col {
-  flex-basis: 48%; 
-  padding: 30px 2px;
+  flex: 1;          
+  min-width: 300px; 
+}
 
+.about-col img {
+  width: 100%;
+  border-radius: 12px; 
 }
-            
-.about-col img{
-    width: 100%;
-    align-items: right;
-    justify-content: space-between;
-}
+
   
         </style>
     </head>
