--- a/about.html
+++ b/about.html
@@ -69,40 +69,41 @@ nav img {
 
 .sub-header h1 {
     margin-top: 85px;
+    font-size: 100px;
+}
+.row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 40px;
+    flex-wrap: wrap;
 }
 
-.row {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: 40px;
-      flex-wrap: wrap;
-    }
+.about-col {
+    flex: 1;
+    padding: 30px 20px;
+    min-width: 300px;
+    color: #333;
+}
 
-    .about-col {
-      flex: 1;
-      padding: 30px 20px;
-      min-width: 300px;
-      color: #333;
-    }
+.about-col h1 {
+    text-align: left;
+    margin-bottom: 20px;
+    font-size: 40px;
+}
 
-    .about-col h1 {
-      text-align: left;
-      margin-bottom: 20px;
-    }
+.about-col p {
+    text-align: left;
+    line-height: 1.6;
+    font-size: 20px;
+}
 
-    .about-col p {
-      text-align: left;
-      line-height: 1.6;
-    }
+.about-col img {
+    width: 300px;
+    border-radius: 12px;
+}
 
-    .about-col img {
-      width: 100%;
-      border-radius: 12px;
-    }
-
-  
-        </style>
+</style>
     </head>
     <body>
         <section class="sub-header">
