--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@ nav img {
 
 .sub-header h1 {
     margin-top: 85px;
-    font-size: 100px;
+    font-size: 80px;
 }
 .row {
     display: flex;
@@ -127,7 +127,7 @@ nav img {
         <section class="about-author">
             <div class="row">
                 <div class ="about-col">
-                    <h1>Samara Nepmuceno</h1>
+                    <h1>Samara Nepomuceno</h1>
                     <p>I'm the founder of CoffeeVerse, and coffee is an adventure with flavor, craftsmanship, and culture. CoffeeVerse was created to explore that adventure and appreciate the traditions that exist around the popular beverage. With knowledge and atmosphere at your fingertips, there is always something new to find here.</p>
                </div>
                     <div class="about-col">
