--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@ nav img {
 
 .sub-header h1 {
     margin-top: 85px;
-    font-size: 80px;
+    font-size: 67px;
 }
 .row {
     display: flex;
@@ -82,6 +82,7 @@ nav img {
 .about-col {
     flex: 1;
     padding: 30px 20px;
+    margin-left: 20px;
     min-width: 300px;
     color: #333;
 }
