--- a/about.html
+++ b/about.html
@@ -102,6 +102,7 @@ nav img {
 .about-col img {
     width: 500px;
     border-radius: 12px;
+    margin-left: 40px;
 }
 
 </style>
@@ -129,7 +130,7 @@ nav img {
             <div class="row">
                 <div class ="about-col">
                     <h1>Meet Samara Nepomuceno</h1>
-                    <p>I'm the founder of CoffeeVerse, and coffee is an adventure with flavor, craftsmanship, and culture. CoffeeVerse was created to explore that adventure and appreciate the traditions that exist around the popular beverage. With knowledge and atmosphere at your fingertips, there is always something new to find here.</p>
+                    <p>I'm the founder of CoffeeVerse, and coffee is an adventure with flavor, craftsmanship, and culture. CoffeeVerse was created to explore that adventure and appreciate the traditions surrounding the popular beverage. With knowledge and atmosphere at your fingertips, there is always something new to find here.</p>
                </div>
                     <div class="about-col">
                     <img src="../CoffeeVere/img/me.jpg" alt="Author photo">
