--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ nav img {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    text-align: center;
+    text-align: right;
 }
 
 .text-box h1 {
@@ -81,7 +81,7 @@ nav img {
 }
 
 .text-box p {
-    margin: 10 px 0 40px;
+    margin: 10px 0 40px;
     font-size: 20px;
     color: #fff;
 }
@@ -114,17 +114,14 @@ nav img {
                 </div>
             </nav>
 
+
+            
         <div class="text-box">
             <h1>Welcome to CoffeeVerse!</h1>
             <p> The space for everything coffee. Whether you’re here to learn, taste, or enjoy, we’ve got a cup waiting for you!</p>
         </div>
         </section>
 
-        <section class=""></section>
 
-        <section class="footer">
-            <h4>About Us</h4>
-            <p>smth smth</p>
-        </section>
     </body>
 </html>
