--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ nav img {
 .text-box{
     width: 90%;
     color: #fff;
-    position: right;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
