--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ nav img {
             
         <div class="text-box">
             <h1>Welcome to CoffeeVerse!</h1>
-            <p> The space for everything coffee. Whether you’re here to <br>learn, taste, or enjoy, we’ve got a cup waiting for you!</p>
+            <p> The space for everything coffee. Whether you’re here to learn, taste, or enjoy, we’ve got a cup waiting for you!</p>
         </div>
         </section>
 
