--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ nav img {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    text-align: right;
+    text-align: center;
 }
 
 .text-box h1 {
@@ -114,7 +114,6 @@ nav img {
                 </div>
             </nav>
 
-
             
         <div class="text-box">
             <h1>Welcome to CoffeeVerse!</h1>
@@ -122,6 +121,9 @@ nav img {
         </div>
         </section>
 
-
+        <section class="footer">
+            <h4>CoffeeVerse ☕︎</h4>
+            <p>Learn, Brew, Savor</p>
+        </section>
     </body>
 </html>
