--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@ nav img {
     margin-top: 20px;
     font-weight: 600px;
 }
+
+.footer p{
+    font-size: small;
+}
         </style>
     </head>
     <body>
