--- a/index.html
+++ b/index.html
@@ -125,6 +125,18 @@ nav img {
         </div>
         </section>
 
+        <section class="preview">
+            <h1>Classics</h1>
+
+            <div class="roww">
+                <div class="preview-col">
+                    <img src="../CoffeeVere/img/latte.jpg">
+                    <h3>Caffè Latte</h3>
+                    <p>Espresso and steamed milk come together in a latte to form a rich, smooth treat.</p>
+                </div>
+            </div>
+        </section>
+
         <section class="footer">
             <h4>CoffeeVerse ☕︎</h4>
             <p>Learn, Brew, Savor</p>
