--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ nav img {
 
             <div class="roww">
                 <div class="preview-col">
-                    <img src="../CoffeeVere/img/latte.jpg">
+                    <img src="../CoffeeVere/img/la.jpg">
                     <h3>Caffè Latte</h3>
                     <p>Espresso and steamed milk come together in a latte to form a rich, smooth treat.</p>
                 </div>
