--- a/index.html
+++ b/index.html
@@ -134,6 +134,16 @@ nav img {
                     <h3>Caffè Latte</h3>
                     <p>Espresso and steamed milk come together in a latte to form a rich, smooth treat.</p>
                 </div>
+                <div class="preview-col">
+                    <img src="../CoffeeVere/img/espresso.jpg">
+                    <h3>Espresso</h3>
+                    <p>A small, intense shot of concentrated coffee provides a rich, bold taste.</p>
+                </div>
+                <div class="preview-col">
+                    <img src="../CoffeeVere/img/mocha.jpg">
+                    <h3>Caffè Mocha</h3>
+                    <p>A creamy blend of coffee and cocoa topped with foam.</p>
+                </div>
             </div>
         </section>
 
