--- a/index.html
+++ b/index.html
@@ -86,6 +86,25 @@ nav img {
     color: #fff;
 }
 
+.preview {
+    width: 80%;
+    margin:auto;
+    text-align: center;
+    padding-top: 100px;;
+}
+
+.preview-col {
+    flex-basis: 31%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: left;
+}
+
+.preview-col img{
+    width: 100%;
+    border-radius: 10px;
+}
+
 .footer {
     width: 100%;
     text-align: center;
