--- a/index.html
+++ b/index.html
@@ -93,16 +93,23 @@ nav img {
     padding-top: 100px;;
 }
 
-.preview-col {
-    flex-basis: 31%;
-    border-radius: 10px;
-    margin-bottom: 5%;
-    text-align: left;
+.roww {
+    display: flex;
+    justify-content: space-between; 
+    flex-wrap: wrap; 
+    gap: 20px; 
 }
 
-.preview-col img{
-    width: 400px;
-    height: 400px;
+.preview-col {
+    flex: 1 1 30%; 
+    border-radius: 10px;
+    margin-bottom: 20px;
+    text-align: left; 
+}
+
+.preview-col img {
+    width: 100%; 
+    height: auto; 
     border-radius: 10px;
 }
 
