--- a/index.html
+++ b/index.html
@@ -113,6 +113,18 @@ nav img {
     border-radius: 10px;
 }
 
+.preview-col h3 {
+    margin-top: 15px;  
+    margin-bottom: 10px; 
+    font-size: 24px;
+}
+
+.preview-col p {
+    margin-top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
 .footer {
     width: 100%;
     text-align: center;
