--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@ nav img {
     border-radius: 10px;
 }
 
+.preview-col h1 { 
+    margin-bottom: 10px; 
+    font-size: 35px;
+}
+
 .preview-col h3 {
     margin-top: 15px;  
     margin-bottom: 10px; 
