--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ nav img {
     margin: auto;
     text-align: center;
     padding-top: 100px;;
-    background: linear-gradient(rgb(166, 117, 75),rgb(217, 165, 119));
+    background-color: linear-gradient(rgb(166, 117, 75),rgb(217, 165, 119));
 }
 
 .roww {
