--- a/index.html
+++ b/index.html
@@ -91,7 +91,11 @@ nav img {
     margin: auto;
     text-align: center;
     padding-top: 100px;;
-    background-color: linear-gradient(rgb(166, 117, 75),rgb(217, 165, 119));
+}
+
+.preview-bg {
+    display: flex;
+    background: linear-gradient(rgb(166, 117, 75),rgb(217, 165, 119));
 }
 
 .roww {
@@ -172,7 +176,7 @@ nav img {
 
         <section class="preview">
             <h1>Classics</h1>
-
+            <div class="preview-bg">
             <div class="roww">
                 <div class="preview-col">
                     <img src="../CoffeeVere/img/la.jpg">
@@ -188,6 +192,7 @@ nav img {
                     <img src="../CoffeeVere/img/mocha.jpg">
                     <h3>Caffè Mocha</h3>
                     <p>A creamy blend of coffee and cocoa topped with foam.</p>
+                    </div>
                 </div>
             </div>
         </section>
