--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ nav img {
 
 .preview-bg {
     display: flex;
-    background: linear-gradient(rgb(166, 117, 75),rgb(217, 165, 119));
+    background: linear-gradient(rgba(166, 117, 75),rgba(217, 165, 119));
 }
 
 .roww {
