--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     font-family: 'Poppins', sans-serif;
 }
 
+body {
+    background-color: linear-gradient(rgba(166, 117, 75),rgba(217, 165, 119));
+}
 
 .header{
     min-height: 100vh;
@@ -91,11 +94,6 @@ nav img {
     margin: auto;
     text-align: center;
     padding-top: 100px;;
-}
-
-.preview-bg {
-    display: flex;
-    background: linear-gradient(rgba(166, 117, 75),rgba(217, 165, 119));
 }
 
 .roww {
@@ -176,7 +174,6 @@ nav img {
 
         <section class="preview">
             <h1>Classics</h1>
-            <div class="preview-bg">
             <div class="roww">
                 <div class="preview-col">
                     <img src="../CoffeeVere/img/la.jpg">
@@ -192,7 +189,6 @@ nav img {
                     <img src="../CoffeeVere/img/mocha.jpg">
                     <h3>Caffè Mocha</h3>
                     <p>A creamy blend of coffee and cocoa topped with foam.</p>
-                    </div>
                 </div>
             </div>
         </section>
