--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
     font-family: 'Poppins', sans-serif;
 }
 
-body {
-    background-color: linear-gradient(rgba(166, 117, 75),rgba(217, 165, 119));
-}
-
 .header{
     min-height: 100vh;
     width: 100%;
@@ -87,6 +83,10 @@ nav img {
     margin: 10px 0 40px;
     font-size: 20px;
     color: #fff;
+}
+
+.pbg {
+    background-color: linear-gradient(rgba(166, 117, 75),rgba(217, 165, 119));
 }
 
 .preview {
@@ -172,6 +172,7 @@ nav img {
         </div>
         </section>
 
+        <div class="pbg">
         <section class="preview">
             <h1>Classics</h1>
             <div class="roww">
@@ -190,6 +191,7 @@ nav img {
                     <h3>Caffè Mocha</h3>
                     <p>A creamy blend of coffee and cocoa topped with foam.</p>
                 </div>
+            </div>
             </div>
         </section>
 
