--- a/index.html
+++ b/index.html
@@ -85,10 +85,6 @@ nav img {
     color: #fff;
 }
 
-.pbg {
-    background-color: linear-gradient(rgba(166, 117, 75),rgba(217, 165, 119));
-}
-
 .preview {
     width: 80%;
     margin: auto;
@@ -172,7 +168,6 @@ nav img {
         </div>
         </section>
 
-        <div class="pbg">
         <section class="preview">
             <h1>Classics</h1>
             <div class="roww">
@@ -190,6 +185,7 @@ nav img {
                     <img src="../CoffeeVere/img/mocha.jpg">
                     <h3>Caffè Mocha</h3>
                     <p>A creamy blend of coffee and cocoa topped with foam.</p>
+                <a href="">Explore More</a>
                 </div>
             </div>
             </div>
