--- a/index.html
+++ b/index.html
@@ -129,6 +129,18 @@ nav img {
     line-height: 1.5;
 }
 
+.hero-btn {
+    display: inline-block;
+    text-decoration: none;
+    color: black;
+    border: 1px solid black;
+    padding: 12px 34px;
+    font-size: 24px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+}
+
 .footer {
     width: 100%;
     text-align: center;
@@ -185,7 +197,7 @@ nav img {
                     <img src="../CoffeeVere/img/mocha.jpg">
                     <h3>Caffè Mocha</h3>
                     <p>A creamy blend of coffee and cocoa topped with foam.</p>
-                <a href="">Explore More</a>
+                <a href="recipes.html" class="hero-btn">Explore More</a>
                 </div>
             </div>
             </div>
