--- a/index.html
+++ b/index.html
@@ -137,8 +137,15 @@ nav img {
     padding: 12px 34px;
     font-size: 24px;
     background: transparent;
-    position: relative;
+    text-align: center;
     cursor: pointer;
+    margin-top: 20px;
+}
+
+.hero-btn:hover{
+    border: 1px solid #8C8C8C;
+    background: #8C8C8C;
+    transition: 1s;
 }
 
 .footer {
