--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ nav img {
     flex: 1 1 30%; 
     border-radius: 10px;
     margin-bottom: 20px;
-    text-align: left; 
+    text-align: center; 
 }
 
 .preview-col img {
@@ -121,12 +121,14 @@ nav img {
     margin-top: 15px;  
     margin-bottom: 10px; 
     font-size: 24px;
+    text-align: left;
 }
 
 .preview-col p {
     margin-top: 0;
     font-size: 16px;
     line-height: 1.5;
+    text-align: left;
 }
 
 .hero-btn {
@@ -137,7 +139,7 @@ nav img {
     padding: 12px 34px;
     font-size: 24px;
     background: transparent;
-    text-align: center;
+    position: relative;
     cursor: pointer;
     margin-top: 20px;
 }
