--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     font-family: 'Poppins', sans-serif;
 }
 
+body {
+    background-color: #D9A577; /* sets solid color for the whole page */
+}
+
 .header{
     min-height: 100vh;
     width: 100%;
