--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 }
 
 body {
-    background-color: #D9A577; /* sets solid color for the whole page */
+    background-color: #D9A577; 
 }
 
 .header{
