--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 }
 
 body {
-    background-color: #D9A577; 
+    background-color: linear-gradient(rgba(92, 91, 90),rgb(116, 153, 150)); 
 }
 
 .header{
