--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@ nav img {
     width: 80%;
     margin: auto;
     text-align: center;
-    padding-top: 100px;;
+    padding-top: 100px;
+    color: #fff;
 }
 
 .roww {
