--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ nav img {
 .hero-btn {
     display: inline-block;
     text-decoration: none;
-    color: black;
+    color: white;
     border: 1px solid black;
     padding: 12px 34px;
     font-size: 24px;
