--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 }
 
 body {
-    background-color: #F7844D; 
+    background-color: #D9A282; 
 }
 
 .header{
@@ -164,7 +164,7 @@ nav img {
 
 .footer h4 {
     margin-bottom: 25px;
-    margin-top: 20px;
+    margin-top: 10px;
     font-weight: 600px;
 }
 
