--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 }
 
 body {
-    background-color: #D9A282; 
+    background-color: #733636; 
 }
 
 .header{
@@ -60,7 +60,7 @@ nav img {
     content: '';
     width: 0%;
     height: 2px;
-    background: #8C8C8C;
+    background: #A7D9DB;
     display: block;
     margin: auto;
     transition: 0.5s;
@@ -94,7 +94,7 @@ nav img {
     margin: auto;
     text-align: center;
     padding-top: 100px;
-    color: black;
+    color: white;
 }
 
 .roww {
@@ -139,8 +139,8 @@ nav img {
 .hero-btn {
     display: inline-block;
     text-decoration: none;
-    color: black;
-    border: 1px solid black;
+    color: white;
+    border: 1px solid white;
     padding: 12px 34px;
     font-size: 24px;
     background: transparent;
@@ -150,8 +150,8 @@ nav img {
 }
 
 .hero-btn:hover{
-    border: 1px solid #8C8C8C;
-    background: #8C8C8C;
+    border: 1px solid #A7D9DB;
+    background: #A7D9DB;
     transition: 1s;
 }
 
