--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ nav img {
     content: '';
     width: 0%;
     height: 2px;
-    background: #A7D9DB;
+    background: #1D3557;
     display: block;
     margin: auto;
     transition: 0.5s;
@@ -150,8 +150,8 @@ nav img {
 }
 
 .hero-btn:hover{
-    border: 1px solid #A7D9DB;
-    background: #A7D9DB;
+    border: 1px solid #1D3557;
+    background: #1D3557;
     transition: 1s;
 }
 
