--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ nav img {
     width: 100%;
     text-align: center;
     padding: 30px 0;
-    background-color: #fff;
+    background-color: #9DAC95;
 }
 
 .footer h4 {
