--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@ nav img {
 }
 
 .hero-btn:hover{
-    border: 1px solid #1D3557;
-    background: #1D3557;
+    border: 1px solid #5C0B12;
+    background: #5C0B12;
     transition: 1s;
 }
 
