--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ nav img {
     content: '';
     width: 0%;
     height: 2px;
-    background: #1D3557;
+    background: #5C0B12;
     display: block;
     margin: auto;
     transition: 0.5s;
