--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@ nav img {
     content: '';
     width: 0%;
     height: 2px;
-    background: #8C8C8C;
+    background: #5C0B12;
     display: block;
     margin: auto;
     transition: 0.5s;
@@ -105,6 +105,23 @@ nav img {
     margin-left: 40px;
 }
 
+.footer {
+    width: 100%;
+    text-align: center;
+    padding: 20px 0;
+    background-color: #9DAC95;
+}
+
+.footer h4 {
+    margin-bottom: 15px;
+    margin-top: 10px;
+    font-weight: 600px;
+}
+
+.footer p{
+    font-size: small;
+}
+
 </style>
     </head>
     <body>
@@ -138,5 +155,9 @@ nav img {
             </div>
         </section>
 
+        <section class="footer">
+            <h4>CoffeeVerse ☕︎</h4>
+            <p>Learn, Brew, Savor</p>
+        </section>
     </body>
 </html>
