--- a/recipes.html
+++ b/recipes.html
@@ -47,7 +47,7 @@ nav img {
     content: '';
     width: 0%;
     height: 2px;
-    background: #8C8C8C;
+    background: #5C0B12;
     display: block;
     margin: auto;
     transition: 0.5s;
