--- a/recipes.html
+++ b/recipes.html
@@ -105,6 +105,23 @@ nav img {
     margin-left: 40px;
 }
 
+.footer {
+    width: 100%;
+    text-align: center;
+    padding: 20px 0;
+    background-color: #9DAC95;
+}
+
+.footer h4 {
+    margin-bottom: 15px;
+    margin-top: 10px;
+    font-weight: 600px;
+}
+
+.footer p{
+    font-size: small;
+}
+
 </style>
     </head>
     <body>
@@ -116,7 +133,7 @@ nav img {
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="about.html">ABOUT</a></li>
                         <li><a href="">TIPS</a></li>
-                        <li><a href="recipes.html">RECIPES</a></li>
+                        <li><a href="">RECIPES</a></li>
                         <li><a href="">REFERENCES</a></li>
                     </ul>
                 </div>
@@ -133,10 +150,14 @@ nav img {
                     <p>I'm the founder of CoffeeVerse, and coffee is an adventure with flavor, craftsmanship, and culture. CoffeeVerse was created to explore that adventure and appreciate the traditions surrounding the popular beverage. With knowledge and atmosphere at your fingertips, there is always something new to find here.</p>
                </div>
                     <div class="about-col">
-                    <img src="../CoffeeVere/img/me.jpg" alt="Author photo">
+                    <img src="../CoffeeVere/img/mee.jpg" alt="Author photo">
                 </div>
             </div>
         </section>
 
+        <section class="footer">
+            <h4>CoffeeVerse ☕︎</h4>
+            <p>Learn, Brew, Savor</p>
+        </section>
     </body>
 </html>
