--- a/recipes.html
+++ b/recipes.html
@@ -133,7 +133,7 @@ nav img {
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="about.html">ABOUT</a></li>
                         <li><a href="">TIPS</a></li>
-                        <li><a href="">RECIPES</a></li>
+                        <li><a href="recipes.html">RECIPES</a></li>
                         <li><a href="">REFERENCES</a></li>
                     </ul>
                 </div>
