--- a/about.html
+++ b/about.html
@@ -14,6 +14,10 @@
     font-family: 'Poppins', sans-serif;
 }
 
+body {
+    background-color: #A66253; 
+}
+
 nav{
     display: flex;
     padding: 2% 6%;
