--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@ nav img {
     padding: 30px 20px;
     margin-left: 40px;
     min-width: 300px;
-    color: #333;
+    color: #fff;
 }
 
 .about-col h1 {
