--- a/recipes.html
+++ b/recipes.html
@@ -139,19 +139,29 @@ nav img {
                 </div>
             </nav>
 
-        <h1>About the Author</h1>
+        <h1>Recipes</h1>
             
         </section>
 
-        <section class="about-author">
-            <div class="row">
-                <div class ="about-col">
-                    <h1>Meet Samara Nepomuceno</h1>
-                    <p>I'm the founder of CoffeeVerse, and coffee is an adventure with flavor, craftsmanship, and culture. CoffeeVerse was created to explore that adventure and appreciate the traditions surrounding the popular beverage. With knowledge and atmosphere at your fingertips, there is always something new to find here.</p>
-               </div>
-                    <div class="about-col">
-                    <img src="../CoffeeVere/img/mee.jpg" alt="Author photo">
+        <section class="preview">
+            <h1>Classics</h1>
+            <div class="roww">
+                <div class="preview-col">
+                    <a href="about.html" img src="../CoffeeVere/img/la.jpg"></a>
+                    <h3>Caffè Latte</h3>
+                    <p>Espresso and steamed milk come together in a latte to form a rich, smooth treat.</p>
                 </div>
+                <div class="preview-col">
+                    <img src="../CoffeeVere/img/espresso.jpg">
+                    <h3>Espresso</h3>
+                    <p>A small, intense shot of concentrated coffee provides a rich, bold taste.</p>
+                </div>
+                <div class="preview-col">
+                    <img src="../CoffeeVere/img/mocha.jpg">
+                    <h3>Caffè Mocha</h3>
+                    <p>A creamy blend of coffee and cocoa topped with foam.</p>
+                </div>
+            </div>
             </div>
         </section>
 
