--- a/recipes.html
+++ b/recipes.html
@@ -14,6 +14,10 @@
     font-family: 'Poppins', sans-serif;
 }
 
+body {
+    background-color: #AA8082; 
+}
+
 nav{
     display: flex;
     padding: 2% 6%;
