--- a/recipes.html
+++ b/recipes.html
@@ -15,7 +15,7 @@
 }
 
 body {
-    background-color: #AA8082; 
+    background-color: #733636; 
 }
 
 nav{
@@ -165,7 +165,9 @@ nav img {
             <h1>Classics</h1>
             <div class="roww">
                 <div class="preview-col">
+                    <a target="_blank" href="about.html">
                     <img src="../CoffeeVere/img/la.jpg">
+                    </a>
                     <h3>Caffè Latte</h3>
                     <p>Espresso and steamed milk come together in a latte to form a rich, smooth treat.</p>
                 </div>
