--- a/recipe1.html
+++ b/recipe1.html
@@ -64,7 +64,7 @@ nav img {
 .sub-header {
     height: 50vh;
     width: 100%;
-    background-image: linear-gradient(rgba(122, 133, 174, 0.7),rgba(73, 81, 110, 0.7)),url("../CoffeeVere/img/smth.jpg");
+    background-image: linear-gradient(rgba(122, 133, 174, 0.7),rgba(73, 81, 110, 0.7)),url("../CoffeeVere/img/r1.jpg");
     background-position: center;
     background-size: cover;
     text-align: center;
@@ -110,7 +110,7 @@ nav img {
                 </div>
             </nav>
 
-        <h1>Recipes</h1>
+        <h1>Caffè Latte</h1>
             
         </section>
 
