--- a/recipes.html
+++ b/recipes.html
@@ -165,7 +165,7 @@ nav img {
             <h1>Classics</h1>
             <div class="roww">
                 <div class="preview-col">
-                    <a target="_blank" href="about.html">
+                    <a target="_blank" href="recipe1.html">
                     <img src="../CoffeeVere/img/la.jpg">
                     </a>
                     <h3>Caffè Latte</h3>
