--- a/recipe1.html
+++ b/recipe1.html
@@ -64,7 +64,7 @@ nav img {
 .sub-header {
     height: 50vh;
     width: 100%;
-    background-image: linear-gradient(rgba(122, 133, 174, 0.7),rgba(73, 81, 110, 0.7)),url("../CoffeeVere/img/r11.jpg");
+    background-image: linear-gradient(rgba(122, 133, 174, 0.7),rgba(73, 81, 110, 0.7)),url("../CoffeeVere/img/smth.jpg");
     background-position: center;
     background-size: cover;
     text-align: center;
@@ -113,7 +113,18 @@ nav img {
         <h1>Caffè Latte</h1>
             
         </section>
-
+        <section class="r1">
+            <div class="row">
+                <div class ="r1-col">
+                    <h1>How to make a caffè latte</h1>
+                    <p>Ingredients: <br> 1 shot espresso <br> 6 oz steamed milk <br> 1 oz milk foam <p>
+                        <p>Instructions: <br> Pull an espresso shot. <br> Steam milk and pour it over the espresso. <br> Top with a thin layer of microfoam and enjoy.</p>
+               </div>
+                    <div class="r1-col">
+                    <img src="../CoffeeVere/img/latte.jpg" alt="Latte photo">
+                </div>
+            </div>
+        </section>
 
 
         <section class="footer">
