--- a/recipe1.html
+++ b/recipe1.html
@@ -76,6 +76,40 @@ nav img {
     font-size: 60px;
 }
 
+.row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 40px;
+    flex-wrap: wrap;
+}
+
+.r1-col {
+    flex: 1;
+    padding: 30px 20px;
+    margin-left: 40px;
+    min-width: 300px;
+    color: #fff;
+}
+
+.r1-col h1 {
+    text-align: left;
+    margin-bottom: 20px;
+    font-size: 40px;
+}
+
+.r1-col p {
+    text-align: left;
+    line-height: 1.6;
+    font-size: 20px;
+}
+
+.r1-col img {
+    width: 500px;
+    border-radius: 12px;
+    margin-left: 40px;
+}
+
 .footer {
     width: 100%;
     text-align: center;
@@ -117,11 +151,11 @@ nav img {
             <div class="row">
                 <div class ="r1-col">
                     <h1>How to make a caffè latte</h1>
-                    <p>Ingredients: <br> 1 shot espresso <br> 6 oz steamed milk <br> 1 oz milk foam <p>
+                    <p>Ingredients: <br> 1 shot espresso <br> 6 oz steamed milk <br> 1 oz milk foam <br><p>
                         <p>Instructions: <br> Pull an espresso shot. <br> Steam milk and pour it over the espresso. <br> Top with a thin layer of microfoam and enjoy.</p>
                </div>
                     <div class="r1-col">
-                    <img src="../CoffeeVere/img/latte.jpg" alt="Latte photo">
+                    <img src="../CoffeeVere/img/la.jpg" alt="Latte photo">
                 </div>
             </div>
         </section>
