--- a/recipe1.html
+++ b/recipe1.html
@@ -151,7 +151,7 @@ nav img {
             <div class="row">
                 <div class ="r1-col">
                     <h1>How to make a caffè latte</h1>
-                    <p>Ingredients: <br> 1 shot espresso <br> 6 oz steamed milk <br> 1 oz milk foam <br><p>
+                    <p>Ingredients: <br> 1 shot espresso <br> 6 oz steamed milk <br> 1 oz milk foam <p> <br>
                         <p>Instructions: <br> Pull an espresso shot. <br> Steam milk and pour it over the espresso. <br> Top with a thin layer of microfoam and enjoy.</p>
                </div>
                     <div class="r1-col">
