--- a/recipes.html
+++ b/recipes.html
@@ -168,17 +168,17 @@ nav img {
                     <a target="_blank" href="recipe1.html">
                     <img src="../CoffeeVere/img/la.jpg">
                     </a>
-                    <h3>Caffè Latte</h3>
+                    <h3>Caffè Latte (click the img for more info) </h3>
                     <p>Espresso and steamed milk come together in a latte to form a rich, smooth treat.</p>
                 </div>
                 <div class="preview-col">
                     <img src="../CoffeeVere/img/espresso.jpg">
-                    <h3>Espresso</h3>
+                    <h3>Espresso (click the img for more info)</h3>
                     <p>A small, intense shot of concentrated coffee provides a rich, bold taste.</p>
                 </div>
                 <div class="preview-col">
                     <img src="../CoffeeVere/img/mocha.jpg">
-                    <h3>Caffè Mocha</h3>
+                    <h3>Caffè Mocha (click the img for more info)</h3>
                     <p>A creamy blend of coffee and cocoa topped with foam.</p>
                 </div>
             </div>
