--- a/recipes.html
+++ b/recipes.html
@@ -163,7 +163,7 @@ nav img {
 
         <section class="preview">
             <h1>Classics</h1>
-            <p>Click the image for more info</p>
+            <p>Click the images for more info</p>
             <div class="roww">
                 <div class="preview-col">
                     <a target="_blank" href="recipe1.html">
