--- a/recipes.html
+++ b/recipes.html
@@ -138,6 +138,7 @@ nav img {
 
 .footer p{
     font-size: small;
+    margin-bottom: 10px;
 }
 
 </style>
@@ -163,7 +164,7 @@ nav img {
 
         <section class="preview">
             <h1>Classics</h1>
-            <p>Click the images for more info</p>
+            <p>Click the images for more info!</p>
             <div class="roww">
                 <div class="preview-col">
                     <a target="_blank" href="recipe1.html">
