--- a/recipes.html
+++ b/recipes.html
@@ -174,7 +174,9 @@ nav img {
                     <p>Espresso and steamed milk come together in a latte to form a rich, smooth treat.</p>
                 </div>
                 <div class="preview-col">
+                    <a target="_blank" href="recipe2.html">
                     <img src="../CoffeeVere/img/espresso.jpg">
+                    </a>
                     <h3>Espresso</h3>
                     <p>A small, intense shot of concentrated coffee provides a rich, bold taste.</p>
                 </div>
